--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -49,6 +49,13 @@
          </widget>
         </item>
         <item>
+         <widget class="QPushButton" name="criptografar_multithread_button">
+          <property name="text">
+           <string>Criptografar (multi-thread)</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QGroupBox" name="groupBox_3">
           <property name="title">
            <string>Mensagem criptografada</string>
@@ -309,7 +316,6 @@
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
